samples/_failures_safe/1761527369_68456f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4af3c9c.c: In function ‘main’:
./samples/SAFE/__tmp_d4af3c9c.c:169:9: error: expected expression at end of input
  169 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_d4af3c9c.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4af3c9c.c:169:9: error: expected declaration or statement at end of input
